# er_robo_ws

./: README.md
global_planner/: CMakeLists.txt  hb_a_star_plugin.xml  package.xml
global_planner/src/: hybrid_a_star.cpp  hybrid_a_star_ros.cpp  reed_shepp.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: myrobot.launch  myrobot_remote.launch
myrobot_control/: package.xml
myrobot_control/config/: myrobot_control.yaml
myrobot_control/launch/: myrobot_controller.launch
myrobot_description/: CMakeLists.txt  package.xml
myrobot_description/launch/: mobile_gazebo.launch  mobile_robot_description.launch  mobile_robot_display.launch  move_base.launch
myrobot_description/maps/: map_dynamic_obs.yaml  map_static_obs.yaml
myrobot_description/rviz/: model.rviz
myrobot_description/urdf/: mobile_robot.gazebo  mobile_robot.trans  mobile_robot.urdf.xacro
myrobot_gazebo/: CMakeLists.txt  package.xml
myrobot_gazebo/launch/: dynamic_obs_map.launch  static_maze.launch  static_obs_map.launch  turtlebot3_dynamic_obs.launch  (+1 more)
myrobot_navigation/: CMakeLists.txt  package.xml
myrobot_navigation/launch/: amcl.launch  move_base.launch  myrobot_static_navigation.launch
myrobot_navigation/param/: common_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  er_robot_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
myrobot_navigation/rviz/: dynamic_navigation.rviz  static_navigation.rviz
myrobot_slam/: CMakeLists.txt  package.xml
(+31 files in other folders)
